[gd_scene load_steps=17 format=2]

[ext_resource path="res://tiles/world_tier.png" type="Texture" id=1]
[ext_resource path="res://WorldScroller.tscn" type="PackedScene" id=2]
[ext_resource path="res://story/world/w0-bottom.png" type="Texture" id=3]
[ext_resource path="res://story/world/w0-top.png" type="Texture" id=4]
[ext_resource path="res://fonts/SWAP_12_Regular.tres" type="DynamicFont" id=5]
[ext_resource path="res://fonts/SWAP_12_Bold.tres" type="DynamicFont" id=6]
[ext_resource path="res://tiles/gradient.png" type="Texture" id=7]
[ext_resource path="res://WorldManager.gd" type="Script" id=8]
[ext_resource path="res://tiles/arcadeBox.png" type="Texture" id=9]
[ext_resource path="res://WorldInfo.gd" type="Script" id=10]
[ext_resource path="res://fonts/SWAP_10_Regular.tres" type="DynamicFont" id=11]

[sub_resource type="StyleBoxTexture" id=1]
content_margin_left = 8.0
content_margin_right = 8.0
content_margin_top = 8.0
content_margin_bottom = 8.0
texture = ExtResource( 1 )
region_rect = Rect2( 0, 0, 96, 128 )
margin_left = 47.0
margin_right = 47.0
margin_top = 80.0
margin_bottom = 47.0

[sub_resource type="StyleBoxTexture" id=2]
content_margin_left = 8.0
content_margin_right = 8.0
content_margin_top = 8.0
content_margin_bottom = 8.0
texture = ExtResource( 9 )
region_rect = Rect2( 0, 0, 32, 32 )
margin_left = 4.0
margin_right = 4.0
margin_top = 4.0
margin_bottom = 4.0
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[sub_resource type="Theme" id=3]
default_font = ExtResource( 5 )
Panel/styles/panel = SubResource( 1 )
PanelContainer/styles/panel = SubResource( 2 )
RichTextLabel/colors/default_color = Color( 1, 1, 1, 1 )
RichTextLabel/colors/font_color_selected = Color( 0.49, 0.49, 0.49, 1 )
RichTextLabel/colors/font_color_shadow = Color( 0, 0, 0, 0 )
RichTextLabel/colors/selection_color = Color( 0.1, 0.1, 1, 0.8 )
RichTextLabel/constants/line_separation = 2
RichTextLabel/constants/shadow_as_outline = 0
RichTextLabel/constants/shadow_offset_x = 2
RichTextLabel/constants/shadow_offset_y = 2
RichTextLabel/constants/table_hseparation = 6
RichTextLabel/constants/table_vseparation = 6
RichTextLabel/fonts/bold_font = ExtResource( 6 )
RichTextLabel/fonts/bold_italics_font = null
RichTextLabel/fonts/italics_font = null
RichTextLabel/fonts/mono_font = null
RichTextLabel/fonts/normal_font = ExtResource( 5 )
RichTextLabel/styles/focus = null
RichTextLabel/styles/normal = null

[sub_resource type="Animation" id=4]
resource_name = "text_scroll"
length = 3.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Control/name:rect_position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 256.0, -512.0 ]
}

[sub_resource type="Animation" id=5]
length = 0.15
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_scale:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rect_position:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/keys = {
"times": PoolRealArray( 0, 0.15 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 180.0, 36.0 ]
}

[node name="world" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 3 )
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}
scroller_path = NodePath("s")
level_info_path = NodePath("Ctr/WorldInfo")

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.478431, 0.392157, 0.270588, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bottom" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -180.0
margin_top = -256.0
margin_right = 180.0
grow_vertical = 0
rect_min_size = Vector2( 360, 256 )
texture = ExtResource( 3 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="top" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -180.0
margin_right = 180.0
margin_bottom = 256.0
rect_min_size = Vector2( 360, 256 )
texture = ExtResource( 4 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="ColorRect" parent="."]
light_mask = -2147483646
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -180.0
margin_top = -240.0
margin_right = 180.0
margin_bottom = 240.0
color = Color( 0.478431, 0.392157, 0.270588, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="s" parent="." instance=ExtResource( 2 )]

[node name="Light2D" type="Light2D" parent="s"]
light_mask = 0
position = Vector2( 180, 240 )
z_as_relative = false
texture = ExtResource( 7 )
texture_scale = 2.0
mode = 3
range_z_min = -1
range_z_max = 1
range_layer_max = 1
range_item_cull_mask = 2
shadow_item_cull_mask = 2

[node name="Ctr" type="CenterContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -128.0
margin_top = -144.0
margin_right = 128.0
margin_bottom = -64.0
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WorldInfo" type="PanelContainer" parent="Ctr"]
light_mask = 0
margin_right = 256.0
margin_bottom = 80.0
rect_min_size = Vector2( 256, 80 )
rect_pivot_offset = Vector2( 128, 0 )
rect_clip_content = true
mouse_filter = 1
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="v" type="VBoxContainer" parent="Ctr/WorldInfo"]
margin_left = 8.0
margin_top = 8.0
margin_right = 248.0
margin_bottom = 72.0
rect_clip_content = true
size_flags_horizontal = 0

[node name="h" type="HBoxContainer" parent="Ctr/WorldInfo/v"]
margin_right = 240.0
margin_bottom = 25.0
rect_min_size = Vector2( 240, 25 )
size_flags_horizontal = 0

[node name="num" type="Label" parent="Ctr/WorldInfo/v/h"]
margin_right = 62.0
margin_bottom = 25.0
custom_fonts/font = ExtResource( 6 )
text = "0-1-1"

[node name="score" type="Label" parent="Ctr/WorldInfo/v/h"]
margin_left = 70.0
margin_top = 1.0
margin_right = 240.0
margin_bottom = 23.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 11 )
text = "00000000pts"
align = 2

[node name="Control" type="Container" parent="Ctr/WorldInfo/v"]
margin_top = 33.0
margin_right = 240.0
margin_bottom = 58.0
rect_min_size = Vector2( 240, 25 )
rect_clip_content = true

[node name="name" type="Label" parent="Ctr/WorldInfo/v/Control"]
margin_left = 256.0
margin_top = -1.0
margin_right = 659.0
margin_bottom = 24.0
rect_min_size = Vector2( 240, 25 )
size_flags_horizontal = 0
text = "Title title title title title title title title title"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Ctr/WorldInfo/v"]
anims/text_scroll = SubResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Ctr/WorldInfo"]
anims/show = SubResource( 5 )

[node name="Tween" type="Tween" parent="."]

[connection signal="level_hovered" from="s" to="." method="_on_s_level_hovered"]
[connection signal="level_selected" from="s" to="." method="_on_s_level_selected"]
[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
